2001-06-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/BufferedByteOutputStream/interrupt.java: New
	file.
	* gnu/testlet/java/io/BufferedByteOutputStream/helper.java: New
	file.

2001-06-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (dates):
	Added EST case again, reverting yesterday's change.  It turns out
	to be correct.

2001-05-14  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (dates):
	Removed `EST' case as it is simply wrong (and unfixable).

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test):
	Correctly extract timezone.

2001-05-13  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test):
	Added regression test for local timezone.

2001-05-11  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test):
	Fixed buglet in new tests.

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (dates): New
	field.
	(test): Added timezone tests.

2001-05-10  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/Calendar/roll.java: New file.

2001-05-09  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/Calendar/add.java (test): Added no-op
	test.

	* gnu/testlet/java/util/Calendar/add.java: New file.

2001-05-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/DateFormatSymbols/Test.java: Added a new
	checkpoint.

	* gnu/testlet/java/util/Calendar/simple.java: Remove bogus test.

2001-05-01  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java: New file.
	* gnu/testlet/java/text/SimpleDateFormat/Test.java (test): Removed
	libgcj regression test.

2001-04-26  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/DateFormatSymbols/Test.java (test):
	Removed println.

2001-04-25  Jeff Sturm  <jsturm@one-point.com>

	* gnu/testlet/java/util/Calendar/simple.java: New file.

2001-04-25  Tom Tromey  <tromey@redhat.com>
